--- a/Richa_Srivastava_nn.ipynb
+++ b/Richa_Srivastava_nn.ipynb
@@ -6,7 +6,7 @@
       "name": "Richa_Srivastava_nn.ipynb",
       "provenance": [],
       "mount_file_id": "1WHlL2k3W1EpdhNNBO63Y2kR9F9mCC2hm",
-      "authorship_tag": "ABX9TyM4au7nKtVgECKiAWbQEUGQ",
+      "authorship_tag": "ABX9TyNxcwrBZDCE2G/en+kw7Wxx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,10 +43,35 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Problem statement:**\n",
+        "CNN Skin Cancer detection assignment\n",
         "\n",
+        "**Problem Statement**<br>\n",
+        "To build a CNN based model which can accurately detect melanoma. Melanoma is a type of cancer that can be deadly if not detected early. It accounts for 75% of skin cancer deaths. A solution which can evaluate images and alert the dermatologists about the presence of melanoma has the potential to reduce a lot of manual effort needed in diagnosis.<br>\n",
         "\n",
-        " To build a CNN based model which can accurately detect melanoma. Melanoma is a type of cancer that can be deadly if not detected early. It accounts for 75% of skin cancer deaths. A solution which can evaluate images and alert the dermatologists about the presence of melanoma has the potential to reduce a lot of manual effort needed in diagnosis.\n",
+        "The dataset consists of 2357 images of malignant and benign oncological diseases, which were formed from the International Skin Imaging Collaboration (ISIC). All images were sorted according to the classification taken with ISIC, and all subsets were divided into the same number of images, with the exception of melanomas and moles, whose images are slightly dominant. The data set contains the following diseases:\n",
+        "\n",
+        "Actinic keratosis\n",
+        "Basal cell carcinoma\n",
+        "Dermatofibroma\n",
+        "Melanoma\n",
+        "Nevus\n",
+        "Pigmented benign keratosis\n",
+        "Seborrheic keratosis\n",
+        "Squamous cell carcinoma\n",
+        "Vascular lesion<br><br>\n",
+        "**Input Data:**\n",
+        "\n",
+        "https://drive.google.com/drive/folders/1qPK0mhfzpkHlqDjSQJ4lbCY1STDw-aJq\n",
+        "<br>**Business Goal**\n",
+        "To build a CNN based model which can accurately detect melanoma\n"
+      ],
+      "metadata": {
+        "id": "oS6KfxCdCdio"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "\n",
         "**Importing Skin Cancer Data**\n",
         "To do: Take necessary actions to read the data\n",
@@ -1194,7 +1219,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Todo: Write your findings after the model fit, see if there is an evidence of model overfit or underfit. Do you think there is some improvement now as compared to the previous model run?\n",
+        "Todo: Write your findings after the model fit, see if there is an evidence of model overfit or underfit. Do you think there is some improvement now as compared to the previous model run?<br>\n",
         "You can see there were huge difference in train and test accuracy without applying augmentation which you can say as overfitting. But after applying augmentation accuracy for train and test are better.\n",
         "\n",
         "Todo: Find the distribution of classes in the training dataset.\n",
@@ -6263,6 +6288,15 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "RU41a2CkCYWo"
+      }
     },
     {
       "cell_type": "markdown",
